Header z-index bugfix

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -37,7 +37,7 @@
 			
 	& > .row {
 		position: relative;
-		z-index: 100;
+		z-index: 2;
 	}	
 }
 .header-content {
